[BE,DOC,TEST] API Hard Delete Schedule By Id, Get Category & Type Clothes
